Add admin API, sample data, JWT roles, FAQs and membership plans
- Admin endpoints under /api/admin: users, block, jobs, reviews moderation,
  support chat read, FAQ CRUD, membership plans and user memberships
- Public GET /api/faqs and /api/membership-plans
- JWT includes role claim; ROLE_ADMIN for admin routes; block banned users
- User blocked fields; review hiddenFromPublic; Postgres schema updates
- SampleDataLoader with realistic seed data and seed admin user
- FirebaseConfig log clarity; CategoryDataLoader order; ADMIN_BACKEND_SUMMARY.txt

Made-with: Cursor