@@ -1,23 +1,26 @@
 package com.example.demoapp.security;
 
-import lombok.AllArgsConstructor;
+import com.example.demoapp.entity.Role;
 import lombok.Getter;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Getter
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class UserPrincipal implements UserDetails {
 
     private final Long userId;
     private final String email;
+    private final List<GrantedAuthority> authorities;
 
-    @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+    public static UserPrincipal create(Long userId, String email, Role role) {
+        Role r = role != null ? role : Role.USER;
+        List<GrantedAuthority> auths = List.of(new SimpleGrantedAuthority("ROLE_" + r.name()));
+        return new UserPrincipal(userId, email, auths);
     }
 
     @Override
